--- a/booth/templates/booth/aruco_board.html
+++ b/booth/templates/booth/aruco_board.html
@@ -149,6 +149,6 @@
 {% block content %}
 <div id="start-capture-container" class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col gap-4 justify-center items-center">
   <button id="start-capture" class="button">Start Capture</button>
-  <p class="text-center text-lg font-medium">For best results, use light mode in bright environments,<br>and dark mode in dark environments.</p>
+  <p class="text-center text-lg font-medium">For best results, use your device in light mode in bright environments,<br>and in dark mode in dark environments.</p>
 </div>
 {% endblock %}
