--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap">
   <link rel="stylesheet" href="{% static 'dist/css/base.css' %}">
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded" rel="stylesheet" />
   {% block head %}
   {% endblock %}
 </head>
