Remove contact saved after load

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -9,6 +9,8 @@
   if (params.get("contact_saved") === "true") {
     alert("Contact saved! We will reach out soon.");
   }
+
+  window.history.replaceState({}, "", window.location.pathname + window.location.hash);
 </script>
 {% endblock %}
 
