--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400..700&display=swap">
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,1,0" rel="stylesheet" />
-  <link rel="stylesheet" href="{% static 'dist/css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% block head %}
   {% endblock %}
 </head>
